Finished first draft to the end of term substitution.

--- a/TypeCheckerGenerator/latex/Composition.tex
+++ b/TypeCheckerGenerator/latex/Composition.tex
@@ -1,24 +1,18 @@
-\section{Composition}
-
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Composition}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
 }
-
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{CoreLanguage}\<%
 \end{code}
 }
-
 \begin{code}%
-\>[0]\AgdaComment{-- Composability}\<%
-\\
 \>[0]\AgdaFunction{Composable}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Scope}\AgdaSpace{}%
