--- a/TypeCheckerGenerator/latex/Substitution.tex
+++ b/TypeCheckerGenerator/latex/Substitution.tex
@@ -47,6 +47,11 @@
 \>[4]\AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scope}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{T}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scoped}\<%
 \end{code}
 }
 
@@ -54,13 +59,6 @@ Substitutions are defined as backward vectors, vectors that grow by appending
 elements to the right hand side as opposed to the left. A substitution is
 defined in terms of two scopes, the scope of the target of substitution, and
 the scope of the entities we will substitute into the target.
-
-We are able to look up individual variables in a substitution, later we will
-see that this is just a special case of using a thinning to select from a
-subsitution but having dedicated syntax is often more convenient.
-
-We also capture the idea of Substitutable entities and define composition
-for substitution across all such definitions.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇒[\AgdaUnderscore{}]\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -83,9 +81,14 @@ for substitution across all such definitions.
 \AgdaSymbol{(}\AgdaBound{X}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{γ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+
+We are able to look up individual variables in a substitution, in section
+\ref{section-thinnings} we explained that this is just a special case of
+using a thinning to select from a subsitution but having dedicated syntax
+is often more convenient and improves readability.
+
+\begin{code}%
 \>[0]\AgdaFunction{lookup}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
@@ -103,9 +106,12 @@ for substitution across all such definitions.
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+
+We also capture a key notion that there is a type that describes scoped
+things on which we may perform substitutions.
+
+\begin{code}%
 \>[0]\AgdaFunction{Substitutable}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Scoped}\AgdaSpace{}%
@@ -130,49 +136,24 @@ for substitution across all such definitions.
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSpace{}%
 \AgdaBound{γ'}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+
+Finally, we acknowledge that given two scope transformations, we can define
+a type to represent composition, which leads us nicely to a definition for
+composition of substitutions.
+
+\input{../../TypeCheckerGenerator/latex/Composition.tex}
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{[\AgdaUnderscore{}]\AgdaUnderscore{}∘σ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{T}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Substitutable}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Composable}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇒[}}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
+\AgdaGeneralizable{T}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\<%
-\end{code}
-
-\hide{
-\begin{code}%
-\>[0]\AgdaFunction{lookup}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{ze}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{x}\<%
 \\
-\>[0]\AgdaFunction{lookup}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{lookup}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
-\AgdaBound{σ}\AgdaSpace{}%
-\AgdaBound{v}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{[}}\AgdaSpace{}%
 \AgdaBound{/}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}%
@@ -202,5 +183,41 @@ for substitution across all such definitions.
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{σ'}\<%
 \end{code}
+
+Although we will not use the definitions of Substitutable and Composable for
+term substitution as we will soon see, these concepts will be useful in later
+defintitions.
+
+Here we have paid attention to the types in particular to aid readability of
+later definitions. This can be seen in our final definition here which states
+that given that some $T$ is substitutable, then we are able to compose the
+subsitutions.
+
+\hide{
+\begin{code}%
+\>[0]\AgdaFunction{lookup}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+\>[0]\AgdaFunction{lookup}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{lookup}\AgdaSpace{}%
+\AgdaBound{T}\AgdaSpace{}%
+\AgdaBound{σ}\AgdaSpace{}%
+\AgdaBound{v}\<%
+\end{code}
 }
+
+\usebox{\composable}
 
