--- a/report/unicode.tex
+++ b/report/unicode.tex
@@ -1,5 +1,6 @@
 
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{newunicodechar}
 \usepackage{amssymb}
 \usepackage{txfonts}
@@ -22,11 +23,12 @@
 \newunicodechar{∎}{\ensuremath{\blacksquare}}
 \newunicodechar{⋆}{\ensuremath{\star}}
 \newunicodechar{↠}{\ensuremath{\twoheadrightarrow}}
+\newunicodechar{↞}{\ensuremath{\twoheadleftarrow}}
 
 \newunicodechar{‼}{\ensuremath{!!}}
 \newunicodechar{⁇}{\ensuremath{??}}
-\newunicodechar{∥}{\ensuremath{\|}}
-\newunicodechar{|}{\ensuremath{\|}}
+\newunicodechar{∥}{\ensuremath{\mid \mid}}
+\newunicodechar{|}{\textbar}
 \newunicodechar{∶}{\ensuremath{:}}
 
 % indices
