Started on Patterns

--- a/TypeCheckerGenerator/latex/Context.tex
+++ b/TypeCheckerGenerator/latex/Context.tex
@@ -73,15 +73,10 @@
 Building on our definitions of substitution and thinning we are now
 able to describe our context.
 
-A context is a substitution of constructions. We ensure that the target
+We take contexts to be substitutions of constructions. We ensure that the target
 of the substitution is scoped identically to the things we will substitute,
 keeping our contexts in a pre-thinned state.This allows us to use terms
 directly from it without having to fix up the scope first.
-
-We define actions of thinnings and weakenings on substitutions of constructions
-but are careful to note that by thinning or weakening a context, the result
-is not necessarily a context as the scope of the targets and substituted terms
-may no longer be equal.
 
 \begin{code}%
 \>[0]\AgdaFunction{Context}\AgdaSpace{}%
@@ -95,20 +90,21 @@ may no longer be equal.
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaBound{γ}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+\>[0]\<%
 \\
-%
-\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨Γ\AgdaUnderscore{}}}%
 \>[6]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}Γ}}%
@@ -116,13 +112,11 @@ may no longer be equal.
 \AgdaFunction{Weakenable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\end{code}
-
-\hide{
-\begin{code}%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}‼V\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Var}\AgdaSpace{}%
@@ -131,8 +125,7 @@ may no longer be equal.
 \AgdaSymbol{(}\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\<%
 \\
 \>[0]\AgdaBound{v}\AgdaSpace{}%
@@ -140,8 +133,7 @@ may no longer be equal.
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{lookup}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Const}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{v}\<%
 \\
@@ -165,13 +157,9 @@ may no longer be equal.
 
 We provide a special function to extend contexts which appends a new
 element to the context (making it no longer a context as $suc γ \neq γ$ in
-$(suc γ) ⇒[ \mbox{Term const} ] γ$) before weakening the whole substitution
-yielding the context $(suc γ) \mbox{⇒[Term const]} (suc γ)$. The extra effort
+$(suc γ) ⇒[ \mbox{Const} ]\; γ$) before weakening the whole substitution
+yielding the context $(suc γ)\; \mbox{⇒[Const]} \;(suc γ)$. The extra effort
 exerted here keeps our contexts in the previously explained pre-thinned state.
-
-If we only ever use $ε$ and $\_ , \_$ to construct our contexts, we can be assured
-that they will always be valid and pre-thinned. No such assurances can
-be made if the raw vector appending data constructor $\_ -,\_$ is used.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -179,8 +167,7 @@ be made if the raw vector appending data constructor $\_ -,\_$ is used.
 \AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Context}\AgdaSpace{}%
@@ -197,17 +184,21 @@ be made if the raw vector appending data constructor $\_ -,\_$ is used.
 \AgdaOperator{\AgdaFunction{\textasciicircum{}Γ}}\<%
 \end{code}
 
-Finally, we define the application of a substitution of constructions
-so that the substitution might be mapped across all elements in the
-context conveniently, but again we are careful to note that applying
-this action to a context may not yield a context as explained previously.
+If we only ever use $ε$ and $\_ , \_$ to construct our contexts, we can be assured
+that they will always be valid and pre-thinned. No such assurances can
+be made if the raw vector appending data constructor $\_ -,\_$ is used.
+
+We will require the various machinery we have defined for previous types such
+as the action of thinnings, weakenings and substitutions however we will avoid
+listing these definitions for each new type we create.
+
+\hide{
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}/Γ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -217,13 +208,10 @@ this action to a context may not yield a context as explained previously.
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
-\AgdaFunction{Term}\AgdaSpace{}%
-\AgdaInductiveConstructor{const}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaGeneralizable{γ'}\<%
-\end{code}
-\hide{
-\begin{code}%
+\\
 \>[0]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{/Γ}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
